--- a/collection1.html
+++ b/collection1.html
@@ -840,7 +840,7 @@
              data-product-name="JZ 33 JERSEY" 
              data-product-price="18"
              data-details="• Oversize cropped tee|• 280gsm Cotton 100%|• Front shiny stone + back silver effect design|• Luxury vibes"
-             data-images="./img/hitam.jpg,./img/hitam1.jpg,./img/hitam2.jpg">
+             data-images="./img/hitam.jpg,./img/hitam1.jpg,./img/hitam2.jpg,./img/ca2.jpg,./img/ca.jpg">
           <img src="./img/product.png" alt="JZ Dark Red 11:11 Tee" />
           
           <!-- Size Selection -->
