--- a/collection2.html
+++ b/collection2.html
@@ -841,7 +841,7 @@
              data-product-name="JZ Luxury Blue Tee" 
              data-product-price="30"
              data-details="• Oversize cropped tee|• 280gsm Cotton 100%|• Front shiny stone + back silver effect design|• Luxury vibes"
-             data-images="./img/black.jpg,./img/black1.jpg,./img/black2.jpg">
+             data-images="./img/black.jpg,./img/black1.jpg,./img/black2.jpg,./img/black3.jpg,./img/black4.jpg">
           <img src="./img/v4.png" alt="JZ Dark Red 11:11 Tee" />
           
           <!-- Size Selection -->
@@ -876,7 +876,7 @@
              data-product-name="JZ Dark Blue Shark Tee" 
              data-product-price="25"
              data-details="• Premium shark graphic design|• 280gsm Cotton 100%|• Dark blue colorway|• Limited edition"
-               data-images="./img/red.jpg,./img/red1.jpg,./img/red2.jpg">
+               data-images="./img/red.jpg,./img/red1.jpg,./img/red2.jpg,./img/red.jpg,">
           <img src="./img/v2.png" alt="JZ Dark Blue Shark Tee" />
             <div class="size-selector">
             <button class="size-btn" onclick="toggleSizeOptions(this)">
@@ -909,7 +909,7 @@
              data-product-price="25"
              data-details="• Premium shark graphic design|• 280gsm Cotton 100%|• Dark blue colorway|• Limited edition"
          
-                data-images="./img/blur.jpg,./img/blur1.jpg,./img/blur2.jpg">
+                data-images="./img/blur.jpg,./img/blur1.jpg,./img/blur2.jpg,./img/blue.jpg">
           <img src="./img/v3.png" alt="JZ Dark Blue Shark Tee" />
             <div class="size-selector">
             <button class="size-btn" onclick="toggleSizeOptions(this)">
