--- a/collection3.html
+++ b/collection3.html
@@ -840,7 +840,7 @@
              data-product-name="JZ Luxury Blue Tee" 
              data-product-price="30"
              data-details="• Oversize cropped tee|• 280gsm Cotton 100%|• Front shiny stone + back silver effect design|• Luxury vibes"
-             data-images="./img/jazzyflows.jpg,./img/jeh.jpg,./img/jaz.jpg">
+             data-images="./img/jazzyflows.jpg,./img/jeh.jpg,./img/jaz.jpg,./img/ka.jpg,./img/ka3.jpg,./img/ka2.jpg">
           <img src="./img/pro11.png" alt="JZ Dark Red 11:11 Tee" />
           
           <!-- Size Selection -->
@@ -872,9 +872,9 @@
         <!-- Product 2 -->
         <div class="product-item" 
              data-product-id="2" 
-             data-product-name="JZ Dark Blue Shark Tee" 
+             data-product-name=" Jz Luxury Black Tee" 
              data-product-price="25"
-             data-details="• Premium shark graphic design|• 280gsm Cotton 100%|• Dark blue colorway|• Limited edition"
+             data-details="• Oversized cropped tee|•280gsm cotton 100%|• Front shiny stone + back silver effect design |• Luxury, Royalty, Clubbing vibes"
              data-images="./img/c3.jpg,./img/c33.jpg,./img/c32.jpg,./img/c34.jpg,./img/c35.jpg">
           <img src="./img/c3shirtblack.png" alt="JZ Dark Blue Shark Tee" />
             <div class="size-selector">
@@ -899,7 +899,7 @@
   
 
  <div class="price-section" onclick="addToCart(2)">
-  <img src="./img/dua.png" alt="Price Buy Button" />
+   <img src="./img/po.PNG" alt="Price Buy Button" />
 </div>
       </div>
       </div>
