--- a/collection2.html
+++ b/collection2.html
@@ -905,9 +905,10 @@
       </div>
           <div class="product-item" 
              data-product-id="3" 
-             data-product-name="JZ Dark Blue Shark Tee" 
+             data-product-name="Jz Black Lion Tee" 
              data-product-price="25"
-             data-details="• Premium shark graphic design|• 280gsm Cotton 100%|• Dark blue colorway|• Limited edition"
+             data-details="• Oversized cropped tee|• 280gsm Cotton 100%|•Front and back glow in the dark effect design
+Y2K , Summer vibes"
          
                 data-images="./img/blur.jpg,./img/blur1.jpg,./img/blur2.jpg,./img/blue.jpg">
           <img src="./img/v3.png" alt="JZ Dark Blue Shark Tee" />
