--- a/spider.html
+++ b/spider.html
@@ -882,7 +882,7 @@
     </div>
 
     <div class="cart-icon" onclick="toggleCart()">
-      <img src="./img/cart.png" alt="Cart Icon" />
+      <img src="./img/cart.PNG" alt="Cart Icon" />
       <span class="cart-badge" id="cartCount">0</span>
     </div>
 
