Change image extensions from .PNG to .png
Updated image file extensions for gender buttons.

--- a/spider.html
+++ b/spider.html
@@ -1051,10 +1051,10 @@ Gently wash only"
             </button>
             <div class="gender-options"> 
               <button class="gender-btn" data-gender="Male" onclick="selectGender(this, 1)">
-                <img src="./img/male.PNG" alt="Male">
+                <img src="./img/male.png" alt="Male">
               </button>
               <button class="gender-btn" data-gender="Female" onclick="selectGender(this, 1)">
-                <img src="./img/female.PNG" alt="Female">
+                <img src="./img/female.png" alt="Female">
               </button>
             </div>
           </div>
