--- a/spider.html
+++ b/spider.html
@@ -1020,7 +1020,7 @@ body {
              data-product-price="18"
              data-details="• Vannthoun Limited edition Collaboration Jersey |•Sublimation with 3D logo design|• Elastic, light weight, Fast drying fabric |• For Sport wear 
 Gently wash only"
-             data-images="./img/spider1.png,./img/spider2.png,./img/spider3.jpg, ./img/spider.png">
+             data-images="./img/spider1.PNG,./img/spider2.PNG,./img/spider3.jpg">
           <img src="./img/spider.png" alt="Jz Red Spider Jersey" />
           
           <!-- Size Selection -->
