--- a/collection2.html
+++ b/collection2.html
@@ -868,7 +868,7 @@ Y2K , Summer vibes"
           </div>
           
           <div class="price-section" onclick="addToCart(1)">
-            <img src="./img/legit.PNG" alt="Price Buy Button" />
+            <img src="./img/legit.png" alt="Price Buy Button" />
           </div>
         </div>
 
