--- a/collection2.html
+++ b/collection2.html
@@ -878,7 +878,7 @@ Y2K , Summer vibes"
              data-product-name="JZ Dark Blue Shark Tee" 
              data-product-price="25"
              data-details="• Premium shark graphic design|• 280gsm Cotton 100%|• Dark blue colorway|• Limited edition"
-               data-images="./img/red.jpg,./img/red1.jpg,./img/red2.jpg,./img/red.jpg,">
+               data-images="./img/red.jpg,./img/red1.jpg,./img/red2.jpg,./img/red3.jpg">
           <img src="./img/v2.png" alt="JZ Dark Blue Shark Tee" />
             <div class="size-selector">
             <button class="size-btn" onclick="toggleSizeOptions(this)">
