--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./img/jzz.png" />
     <meta name="description" content="Jazzyflows is a premier Cambodian clothing brand dedicated to defining modern elegance and luxury in fashion." />
+    <meta name="google-adsense-account" content="ca-pub-7212190583548318">
     <title>JAZZYFLOWS</title>
     <style>
        * {
