--- a/collection3.html
+++ b/collection3.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <link rel="icon" type="image/png" href="./img/jzz.png" />
+  <meta name="google-adsense-account" content="ca-pub-7212190583548318">
     <title>JAZZYFLOWS</title>
 <style>
      * {
