--- a/spider.html
+++ b/spider.html
@@ -1178,7 +1178,7 @@ let currentIndex = 0;
 
 // === Define sold-out sizes per product & gender ===
 const soldOutSizes = {
-  "1": { "Female": ["S", "M", "L"], "Male": ["L"] }
+  "1": { "Female": ["S", "M", "L","XL"], "Male": ["L"]}
   // Add more products if needed
 };
 
