Add Google AdSense script to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/png" href="./img/jzz.png" />
     <meta name="description" content="Jazzyflows is a premier Cambodian clothing brand dedicated to defining modern elegance and luxury in fashion." />
     <meta name="google-adsense-account" content="ca-pub-7212190583548318">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7212190583548318"
+     crossorigin="anonymous"></script>
     <title>JAZZYFLOWS</title>
     <style>
        * {
