--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./img/jzz.png" />
     <meta name="description" content="Jazzyflows is a premier Cambodian clothing brand dedicated to defining modern elegance and luxury in fashion." />
-    <meta name="google-adsense-account" content="ca-pub-7212190583548318">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7212190583548318"
-     crossorigin="anonymous"></script>
     <title>JAZZYFLOWS</title>
     <style>
        * {
@@ -158,6 +155,51 @@ body {
 @keyframes glow {
     0%, 100% { opacity: 0.6; }
     50% { opacity: 1; }
+}
+.footer {
+    margin-top: 40px;
+    padding: 20px 10px 30px;
+    text-align: center;
+    z-index: 3;
+}
+
+.footer-links {
+    margin-top: 12px;
+    font-size: 12px;
+    letter-spacing: 1px;
+}
+
+.footer-links a {
+    color: #d4af37; /* gold */
+    text-decoration: none;
+    transition: opacity 0.3s ease;
+}
+
+.footer-links a:hover {
+    opacity: 0.7;
+}
+
+.footer-links span {
+    color: rgba(212, 175, 55, 0.5);
+    margin: 0 6px;
+}
+
+.footer-note {
+    margin-top: 8px;
+    font-size: 10px;
+    color: rgba(255, 255, 255, 0.5);
+    font-style: italic;
+}
+
+/* Mobile */
+@media screen and (max-width: 480px) {
+    .footer-links {
+        font-size: 10px;
+    }
+
+    .footer-note {
+        font-size: 9px;
+    }
 }
 
 .collection-label img {
@@ -571,6 +613,24 @@ body {
             <img class="logo" src="./imgg/table.PNG" alt="Logo">
         </div>
     </div>
+    <div class="footer">
+ 
+
+    <div class="footer-links">
+        <a href="#">Privacy Policy</a>
+        <span>•</span>
+        <a href="#">Terms & Conditions</a>
+        <span>•</span>
+        <a href="#">About Us</a>
+        <span>•</span>
+        <a href="#">Contact Us</a>
+    </div>
+
+    <p class="footer-note">
+        © 2025 Jazzyflows.
+    </p>
+</div>
+
 <script>
 function scrollPage(direction) {
     if (direction === 'up') {
